--- a/translations/frontend-app-learner-dashboard/src/i18n/messages/ru.json
+++ b/translations/frontend-app-learner-dashboard/src/i18n/messages/ru.json
@@ -13,8 +13,8 @@
   "learner-dash.courseListFilters.notStarted": "Не начато",
   "learner-dash.courseListFilters.done": "Завершено",
   "learner-dash.courseListFilters.notEnrolled": "Не зарегистрирован",
-  "learner-dash.courseListFilters.upgraded": "Модернизированный",
-  "learner-dash.courseListFilters.clearAll": "Clear all",
+  "learner-dash.courseListFilters.upgraded": "Обновлен",
+  "learner-dash.courseListFilters.clearAll": "Очистить все",
   "learner-dash.courseListFilters.sort": "Сортировать",
   "learner-dash.courseListFilters.sortLastEnrolled": "Последняя регистрация",
   "learner-dash.courseListFilters.sortTitle": "Название (Я)",
