--- a/translations/frontend-app-learner-dashboard/src/i18n/messages/uk.json
+++ b/translations/frontend-app-learner-dashboard/src/i18n/messages/uk.json
@@ -96,7 +96,7 @@
   "learner-dash.unenrollConfirm.confirm.finish.return": "Повернутися до інформаційної панелі",
   "learner-dash.courseCard.actions.upgrade": "Перейти на повну версію",
   "learner-dash.courseCard.actions.beginCourse": "Розпочати курс",
-  "learner-dash.courseCard.actions.resume": "Резюме",
+  "learner-dash.courseCard.actions.resume": "Продолжить",
   "learner-dash.courseCard.actions.viewCourse": "Переглянути курс",
   "learner-dash.courseCard.actions.selectSession": "Обрати Сеанс",
   "learner-dash.courseCard.banners.auditAccessExpired": "Ваш контрольний доступ до цього курсу минув.",
