--- a/translations/credentials/credentials/conf/locale/ru/LC_MESSAGES/django.po
+++ b/translations/credentials/credentials/conf/locale/ru/LC_MESSAGES/django.po
@@ -570,7 +570,7 @@ msgid ""
 "mastered in %(program_display_name)s."
 msgstr ""
 "Вы усердно работали, чтобы заработать свой сертификат %(platform_name)s - "
-"поделиться им с коллегами, друзьями и семьей, чтобы получить информацию о "
+"поделитесь им с коллегами, друзьями и семьей, чтобы все знали о "
 "том, чем вы овладели в %(program_display_name)s. "
 
 #: templates/credentials/edx_ace/common/base_body.html
