--- a/translations/frontend-app-learner-dashboard/src/i18n/messages/ru.json
+++ b/translations/frontend-app-learner-dashboard/src/i18n/messages/ru.json
@@ -39,7 +39,7 @@
   "learnerVariantDashboard.menu.account.label": "Учётная запись",
   "learnerVariantDashboard.menu.orderHistory.label": "История заказов",
   "learnerVariantDashboard.menu.signOut.label": "Выйти",
-  "learnerVariantDashboard.course": "курсов",
+  "learnerVariantDashboard.course": "Курсы",
   "learnerVariantDashboard.program": "Программы",
   "learnerVariantDashboard.discoverNew": "Каталог курсов",
   "learnerVariantDashboard.logoAltText": "edX, Inc. Dashboard",
