--- a/translations/frontend-app-course-authoring/src/i18n/messages/ru.json
+++ b/translations/frontend-app-course-authoring/src/i18n/messages/ru.json
@@ -300,7 +300,7 @@
   "completedItemLabel": "завершено",
   "uncompletedItemLabel": "не завершено",
   "course-authoring.course-outline.card.expandTooltip": "Свернуть/развернуть эту карточку",
-  "course-authoring.course-outline.card.status-badge.live": "Жить",
+  "course-authoring.course-outline.card.status-badge.live": "В прямом эфире",
   "course-authoring.course-outline.card.status-badge.gated": "Закрытый",
   "course-authoring.course-outline.card.status-badge.published-not-live": "Опубликовано не в прямом эфире",
   "course-authoring.course-outline.card.status-badge.staff-only": "Служебное помещение",
@@ -310,9 +310,9 @@
   "course-authoring.course-outline.card.menu.publish": "Опубликовать",
   "course-authoring.course-outline.card.menu.configure": "Настройки",
   "course-authoring.course-outline.card.menu.duplicate": "Копировать",
-  "course-authoring.course-outline.card.menu.moveup": "Вверх",
-  "course-authoring.course-outline.card.menu.movedown": "Двигаться вниз",
-  "course-authoring.course-outline.card.menu.delete": "Скопировать в буфер обмена",
+  "course-authoring.course-outline.card.menu.moveup": "Переместить вверх",
+  "course-authoring.course-outline.card.menu.movedown": "Переместить вниз",
+  "course-authoring.course-outline.card.menu.delete": "Удалить",
   "course-authoring.course-outline.card.menu.proctoring-settings": "Настройки прокторинга",
   "course-authoring.course-outline.card.menu.proctoring-settings-tooltip": "Настройки прокторинга",
   "course-authoring.course-outline.card.badge.discussionEnabled": "Обсуждения включены",
