--- a/translations/frontend-app-course-authoring/src/i18n/messages/ru.json
+++ b/translations/frontend-app-course-authoring/src/i18n/messages/ru.json
@@ -25,7 +25,7 @@
   "course-authoring.advanced-settings.alert.proctoring.error.aria.labelledby": "название-предупреждения-опасности",
   "course-authoring.advanced-settings.alert.proctoring.error.aria.describedby": "оповещение-описание-опасности",
   "course-authoring.content-tags-drawer.header.subtitle": "Управление тегами",
-  "course-authoring.content-tags-drawer.collapsible.add-tags.button": "Добавить теги",
+  "course-authoring.content-tags-drawer.collapsible.add-tags.button": " теги",
   "course-authoring.content-tags-drawer.spinner.loading": "Загрузка",
   "course-authoring.content-tags-drawer.tags-dropdown-selector.spinner.loading": "Загрузка тегов",
   "course-authoring.content-tags-drawer.tags-dropdown-selector.load-more-tags.button": "Загрузить ещё",
@@ -141,8 +141,8 @@
   "header.links.certificates": "Сертификаты",
   "header.links.publisher": "Публицист",
   "header.links.import": "Импорт",
-  "header.links.exportCourse": "Экспортный курс",
-  "header.links.exportTags": "Экспорт тегов",
+  "header.links.exportCourse": "Экспортировать курс",
+  "header.links.exportTags": "Экспортировать теги",
   "header.links.checklists": "Контрольные списки",
   "header.user.menu.studio": "Studio Дом",
   "header.user.menu.maintenance": "Техническое обслуживание",
@@ -649,10 +649,10 @@
   "course-authoring.files-and-uploads.file-info.copyWebUrl.title": "Копировать веб-адрес",
   "course-authoring.files-and-uploads.file-info.dateAdded.title": "Дата добавления",
   "course-authoring.files-and-uploads.file-info.fileSize.title": "Размер файла",
-  "course-authoring.files-and-uploads.file-info.studioUrl.title": "Студия url",
+  "course-authoring.files-and-uploads.file-info.studioUrl.title": "URL в Studio",
   "course-authoring.files-and-uploads.file-info.webUrl.title": "URL-адрес веб-страницы",
-  "course-authoring.files-and-uploads.file-info.lockFile.title": "Блокировать файл",
-  "course-authoring.files-and-uploads.file-info.lockFile.tooltip.content": "По умолчанию любой может получить доступ к загруженному вами файлу, если знает URL-адрес веб-сайта, даже если он не зарегистрирован на ваш курс. Вы можете предотвратить внешний доступ к файлу, заблокировав его. Когда вы блокируете файл, веб-URL-адрес позволяет получить доступ к файлу только учащимся, которые зачислены на ваш курс и вошли в систему.",
+  "course-authoring.files-and-uploads.file-info.lockFile.title": "Заблокировать файл",
+  "course-authoring.files-and-uploads.file-info.lockFile.tooltip.content": "По умолчанию любой человек может получить доступ к загруженному вами файлу, если он знает URL-адрес, даже если он не зарегистрирован в вашем курсе. Вы можете предотвратить доступ к файлу извне, заблокировав его. При блокировке файла веб-адрес позволяет получить доступ к нему только тем учащимся, которые зарегистрированы в вашем курсе и вошли в систему.",
   "course-authoring.files-and-videos.sort-and-filter.modal.filter.activeCheckbox.label": "Активный",
   "course-authoring.files-and-videos.sort-and-filter.modal.filter.inactiveCheckbox.label": "Неактивный",
   "course-authoring.files-and-videos.sort-and-filter.modal.filter.lockedCheckbox.label": "Заблокировано",
@@ -673,18 +673,18 @@
   "course-authoring.files-and-upload.apiStatus.downloadingAction.message": "Загрузка",
   "course-authoring.files-and-upload.addFiles.error.fileSize": "Загруженный файл(ы) должен иметь размер не более 20 МБ. Пожалуйста, измените размер файлов и повторите попытку.",
   "course-authoring.files-and-upload.table.noResultsFound.message": "результаты не найдены",
-  "course-authoring.files-and-upload.addFiles.button.label": "Добавить {fileType} с",
+  "course-authoring.files-and-upload.addFiles.button.label": "Добавить {fileType}",
   "course-authoring.files-and-upload.action.button.label": "Действия",
   "course-authoring.files-and-upload.errorAlert.message": "{message}",
   "course-authoring.files-and-uploads.file-info.transcripts.error.alert": "Расшифровка не удалась: &quot; {error} &quot;",
-  "course-authoring.files-and-uploads.file-info.usage.title": "Использовать",
-  "course-authoring.files-and-uploads.file-info.usage.loading.message": "Загрузка",
+  "course-authoring.files-and-uploads.file-info.usage.title": "Использование",
+  "course-authoring.files-and-uploads.file-info.usage.loading.message": "Загружается",
   "course-authoring.files-and-uploads.file-info.usage.notInUse.message": "В настоящее время не используется",
   "course-authoring.files-and-uploads.cardMenu.copyVideoIdTitle": "Скопировать идентификатор видео",
-  "course-authoring.files-and-uploads.cardMenu.copyStudioUrlTitle": "Копировать URL-адрес студии",
+  "course-authoring.files-and-uploads.cardMenu.copyStudioUrlTitle": "Копировать URL-адрес в Studio",
   "course-authoring.files-and-uploads.cardMenu.copyWebUrlTitle": "Копировать веб-адрес",
-  "course-authoring.files-and-uploads.cardMenu.downloadTitle": "Звгружено",
-  "course-authoring.files-and-uploads.cardMenu.lockTitle": "Замок",
+  "course-authoring.files-and-uploads.cardMenu.downloadTitle": "Загрузить",
+  "course-authoring.files-and-uploads.cardMenu.lockTitle": "Заблокировать",
   "course-authoring.files-and-uploads.cardMenu.unlockTitle": "Разблокировать",
   "course-authoring.files-and-uploads.cardMenu.infoTitle": "Информация",
   "course-authoring.files-and-uploads.cardMenu.downloadEncodingsTitle": "Скачать список видео (.csv)",
@@ -1325,7 +1325,7 @@
   "course-authoriong.video-uploads.file-info.transcript.error.fileSizeError": "Размер файла стенограммы превышает максимально допустимый. Пожалуйста, попробуйте еще раз.",
   "course-authoriong.video-uploads.file-info.transcript.deleteTranscript": "Удалить",
   "course-authoriong.video-uploads.file-info.transcript.replaceTranscript": "Заменить",
-  "course-authoriong.video-uploads.file-info.transcript.downloadTranscript": "Звгружено",
+  "course-authoriong.video-uploads.file-info.transcript.downloadTranscript": "Загрузить",
   "course-authoriong.video-uploads.file-info.transcripts.languageSelectPlaceholder": "Выберите язык",
   "course-authoriong.video-uploads.file-info.transcripts.cancelDeleteLabel": "Отмена",
   "course-authoriong.video-uploads.file-info.transcripts.confirmDeleteLabel": "Удалить",
